# muzik

./: .env.example  .pre-commit-config.yaml  GUI.md  PLAN.md  README.md  SPOTIFY.md  TODO.md  docker-compose.yml  mise.toml  pyproject.toml
.claude/: settings.local.json
muzik/: __main__.py  app.py  config.py
muzik/commands/: archive.py  bandcamp.py  cache.py  config.py  download.py  import_.py  init.py  organize.py  soulseek.py  split.py  validate.py  workflow.py
muzik/core/: audio.py  bandcamp.py  cache.py  chapters.py  description_chapters.py  metadata.py  musicbrainz.py  quality.py  runner.py
muzik/core/beets/: __init__.py  config.py  decisions.py  events.py  importer.py  views.py
muzik/core/sources/: __init__.py  base.py  soulseek.py  youtube.py
muzik/core/workflow/: __init__.py  decisions.py  events.py  service.py
muzik/tui/: __init__.py  app.py  screens.py  widgets.py
muzik/ui/: chapter_editor.py  console.py
muzik/ui/cli/: __init__.py  decisions.py  events.py
tests/: test_bandcamp_command.py  test_beets_config.py  test_beets_importer.py  test_cache_quality.py  test_chapters.py  test_config_settings.py  test_download_command.py  test_import_command.py  test_metadata_audio.py  test_organize_command.py  test_soulseek_command.py  test_soulseek_source.py  test_sources_base.py  test_tui_app.py  test_validate.py  test_workflow_decisions.py  test_workflow_service.py  test_workflow_soulseek.py  test_youtube_source.py
tests/fixtures/slskd/: search_response.json
