[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muzik"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0.3",
    "musicbrainzngs>=0.7.1",
    "beets>=2.6.2",
    "playwright>=1.40",
    "aiohttp>=3.10",
    "stamina>=24.2",
    "beautifulsoup4>=4.12",
]

[project.scripts]
muzik = "muzik.app:app"

[tool.hatch.build.targets.wheel]
packages = ["muzik"]

[dependency-groups]
dev = [
    "prek>=0.3.3",
    "ruff>=0.15.3",
    "ty>=0.0.19",
]
